[tool.poetry]
name = "crypto-api"
version = "0.1.0"
description = ""
authors = ["Miguel Martín <alu0101209777@ull.edu.es>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
